--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown"><strong>Add</strong></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                  <li><a ng-click="addClusters()">Cluster Information</a></li>
                   <li><a ng-click="addChart()">Chart</a></li>
                   <li><a ng-click="addServers()">Server Summary</a></li>
                 </ul>
